<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">oussama_s_application1</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="msg_you_have_an_acc">You have an Account? Login</string>
    <string name="lbl_home_page">Home Page</string>
    <string name="msg_consulter_vos_c">Consulter vos constats</string>
    <string name="lbl_register2"> Register</string>
    <string name="lbl_new_here">New Here?</string>
    <string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="msg_formuler_un_con">Formuler un constat</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_constun">ConsTun</string>
    <string name="msg_forgot_password">Forgot Password?</string>
    <string name="msg_new_here_regis">New Here? Register</string>
    <string name="lbl_home_page_one">Home Page One</string>
    <string name="lbl_signup">SignUp</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_loginone">loginOne</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_phone_number">Phone Number</string>
    <string name="lbl_finish">Finish</string>
    <string name="lbl_app_navigation">App Navigation</string>
    <string name="msg_you_have_an_acc2">You have an Account?</string>
    <string name="mustNotBeEmpty">Must not be empty !</string>
    <string name="SignIn">SignIn</string>
    <string name="SignUp">SignUp</string>
    <string name="password">password</string>
    <string name="C_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="numero">Numero</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="eMail">Email</string>
    <string name="repeter_password">repeter password</string>
    <string name="sign_in">Sign In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_permis">image permis</string>
    <string name="take_image">take image</string>
    <string name="maricule">maricule voiture</string>
    <string name="codeattestation">code Attestation assurance</string>
    <string name="cin">CIN</string>
    <string name="update">Update</string>
    <string name="remember_me">Remember Me</string>
    <string name="generate">Generate</string>
    <string name="title_activity_creat1">Creat1Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="votre_nom">Votre nom</string>
    <string name="votre_matricule">votre matricule</string>
    <string name="votre_code_assurence">Votre code Assurence</string>
    <string name="votre_cin">Votre CIN</string>
    <string name="votre_numero">Votre numero</string>
    <string name="camera">Camera</string>

    //Headings
    <string name="heading_one">Quick &amp; Easy Payments</string>
    <string name="heading_two">Instant Notifications</string>
    <string name="heading_three">Cashless Payment</string>
    <string name="heading_fourth">Pay Anywhere</string>

    //Description
    <string name="desc_one">Grow your Business By Accepting Card Payments with The New Card Reader</string>
    <string name="desc_two">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_three">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_fourth">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>

</resources>
