<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_centerInParent="true"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                card_view:cardCornerRAdius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="23dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Emailprofile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:text="oussama.sebai@esprit.tn"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="38dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="38dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout
                        android:id="@+id/SignUpLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="25dp">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:hint="@string/numero"
                            app:boxStrokeColor="#4E4A4A"
                            app:boxStrokeWidth="1dp"
                            app:shapeAppearanceOverlay="@style/Button4">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/NumTelprofile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="textEmailAddress"
                                android:textColor="@color/black"
                                android:textSize="13sp"
                                android:textStyle="normal" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:hint="@string/maricule"
                            app:boxStrokeColor="#4E4A4A"
                            app:boxStrokeWidth="1dp"
                            app:shapeAppearanceOverlay="@style/Button4">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/matriculeprofile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType=""
                                android:textColor="@color/black"
                                android:textSize="13sp"
                                android:textStyle="normal" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:hint="@string/codeattestation"
                            app:boxStrokeColor="#4E4A4A"
                            app:boxStrokeWidth="1dp"
                            app:shapeAppearanceOverlay="@style/Button4">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/caaprofile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="number"
                                android:textColor="@color/black"
                                android:textSize="13sp"
                                android:textStyle="normal" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:hint="@string/cin"
                            app:boxStrokeColor="#4E4A4A"
                            app:boxStrokeWidth="1dp"
                            app:shapeAppearanceOverlay="@style/Button4">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/cinprofile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="number"
                                android:textColor="@color/black"
                                android:textSize="13sp"
                                android:textStyle="normal" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/updateprofile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="24dp"
                            android:gravity="center"
                            android:text="@string/update"
                            android:textAllCaps="false"
                            android:textColor="@color/textColor"
                            android:textSize="17sp"
                            app:backgroundTint="@color/green_700"
                            app:shapeAppearanceOverlay="@style/Button5" />

                        <Button
                            android:id="@+id/file"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="24dp"
                            android:gravity="center"
                            android:text="Files"
                            android:textAllCaps="false"
                            android:textColor="@color/textColor"
                            android:textSize="17sp"
                            app:backgroundTint="@color/green_700"
                            app:shapeAppearanceOverlay="@style/Button5" />


                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>
    <com.google.android.material.imageview.ShapeableImageView
        android:src="@drawable/slider"
        app:shapeAppearanceOverlay="@style/Circular"
        android:elevation="15dp"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:layout_width="98dp"
        android:layout_height="98dp"/>
</RelativeLayout>
